# c-programming-practice

./: .gitignore  README.md  ideas.md  main.c  qn.txt
basics/: 003_1_arraymain.c  004_stringsMain.c  005_struct_main.c  006_01_file_read_write_main.c  008_01_pointer_arithmetic_main.c  008_02_pointer_arithmetic_main.c  008_06_pointer_arithmetic_star_star_main.c  009_02_static_main.c  009_scope_main.c  010_13_env_main.c  CMakeLists.txt  Makefile  main  main.c
basics/001_basic/: 001_basicsmain.c  010_01_arg_main.c
basics/011_multi_file_proj/: foo
basics/013-cstrings/: Makefile  cstring.c  cstring.h  t.c  test.c
markdowns/: IDEAS.md  ROADMAP.md  TIMELINE.md
networking/http/: Makefile
networking/udp/: Makefile
projs/0000-basic-practice/: 002_pointerMain.c  006_02_binary_write_read_main.c  007_typedef_main.c  008_03_pointer_arithmetic_malloc_main.c  008_04_pointer_arithmetic_calloc_main.c  008_05_pointer_arithmetic_realloc_main.c  010_02_exit_status_main.c
projs/0000_basic-practice/: 003_2_arraymain.c  010_types_conversion_main.c
projs/001_line-reader/: foo-bar.txt  main  main.c
projs/002_struct_json_formatter/: main  main.c  test.txt
projs/003_converter/: Makefile  main.c
projs/003_pdf-reader/: Makefile  main  main.c  output.txt
projs/004_calculator/: Makefile  main.c
projs/005_str_reversal/: Makefile  main.c
projs/006_wc/: counter.c  counter.h  main.c  test.txt
projs/007_phone_book/: main.c  phone-book.txt
projs/013-basic-gameloop-sdl/sdl2/: CMakeLists.txt  Makefile
projs/013-basic-gameloop-sdl/sdl2/src/: main.c
projs/017-media/: Makefile
(+135 files in other folders)
